# roomsec-gateway

./: .clang_complete  .gitignore  .gitmodules  Makefile.am  Makefile.am.checkstyle  Makefile.am.coverage  README  configure.ac  gitcommit
conf/: gateway.conf  log.conf
doc/: todo.org
libauthorize/: Authority.cpp  Authority.h  Authority_server.skeleton.cpp  CredentialBackChannel.cpp  CredentialBackChannel.h  CredentialBackChannel_server.skeleton.cpp  Makefile.am  authorize_constants.cpp  authorize_constants.h  authorize_types.cpp  authorize_types.h
libauthorize/gen-cpp/: Authority.cpp  Authority.h  Authority_server.skeleton.cpp  CredentialBackChannel.cpp  CredentialBackChannel.h  CredentialBackChannel_server.skeleton.cpp  authorize_constants.cpp  authorize_constants.h  authorize_types.cpp  authorize_types.h
src/cpp/: Makefile.am  actor.cpp  actor.h  alarm.cpp  alarm.h  authorityadapter.cpp  authorityadapter.h  authorityclient.h  blockanalysis.cpp  blockanalysis.h  blockanalyzer.cpp  blockanalyzer.h  blocksensor.cpp  blocksensor.h  buzzer.cpp  buzzer.h  display.h  doorstatecontroller.cpp  doorstatecontroller.h  doorstatesensor.cpp  doorstatesensor.h  fingerprintauthnadapter.cpp  fingerprintauthnadapter.h  fingerprintcontroller.cpp  fingerprintcontroller.h  fingerprintscanner.cpp  fingerprintscanner.h  gateway.cpp  gateway.h  ioexpander.cpp  ioexpander.h  lcddisplay.cpp  lcddisplay.h  lock.cpp  lock.h  main.cpp  main.h  mcp3008blocksensor.cpp  mcp3008blocksensor.h  queue.h  (+15 more)
test/: Makefile  authorityadaptertest.cpp  blockanalysistest.cpp  blockanalyzertest.cpp  buzzertest.cpp  doorstatesensortest.cpp  locktest.cpp  mockauthorityadapter.h  mockblocksensor.h  temp_test.c
