#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gateway-roomsec], [1.0], [youngar@mcmaster.ca])
AC_CONFIG_SRCDIR([src/cpp/main.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(foreign -Wall -Werror)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AM_PROG_AR
AC_PROG_RANLIB
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile libauthorize/Makefile src/Makefile src/cpp/Makefile])
AC_OUTPUT
